# complex-parenting

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  AGENTS.md  DONATION_SETUP.md  FORMATTING_NOTES.md  LICENSE  LINTING.md  Makefile  README.md  _quarto.yml  index.qmd  package-lock.json  pyproject.toml  references.bib  requirements-dev.txt  styles.css
audiobook/: README.md  requirements.txt
books/: 00-copyright.qmd  01-foundations.qmd  02-abrahamic-family.qmd  03-medieval-scars.qmd  04-colonial-wound.qmd  04a-part1-divider.qmd  05-ideology.qmd  06-global-jihad.qmd  07-non-believers.qmd  08-women-children.qmd  09-digital-front.qmd  10-modernity.qmd  10a-part2-divider.qmd  11-theological-way-out.qmd  12-social-way-out.qmd  12a-transition-understanding.qmd  13-psychology-obedience.qmd  14-economics-terror.qmd  15-future-hate.qmd  15a-part3-divider.qmd  16-comparative-buddhism.qmd  17-comparative-christianity.qmd  18-comparative-hinduism.qmd  18a-part4-divider.qmd  19-conclusion.qmd  20-glossary.qmd  21-appendix-radicalization-guide.qmd  24-about-author.qmd  _quarto.yml  acknowledgements.qmd  index.qmd  index.tex  preface.qmd  styles.css
chapters/: 00-front-matter.qmd  01-comorbidity-gap.qmd  01-introduction.qmd  01b-conditions-individually.qmd  01c-sarahs-story-bipolar.qmd  01d-marcus-story-adhd.qmd  01e-emmas-story-autism.qmd  02-bipolar-teen-brain.qmd  03-illness-vs-identity.qmd  04-the-blur.qmd  05-medical-traffic-jams.qmd  06-managing-the-rage.qmd  07-sleep-is-medicine.qmd  08-the-family-mobile.qmd  09-strategies-for-success.qmd  10-stories-from-frontlines.qmd  11-conclusion.qmd  12-appendix-a-resources.qmd  13-appendix-b-glossary.qmd  14-appendix-c-iep-samples.qmd  15-appendix-d-adults.qmd  16-about-author.qmd
references/: review2.md  review3.md
resources/: book_outline.md  quarto_charts_guide.md
scripts/: __init__.py  fix_bullets.py  fix_checkbox_lists.py  fix_special_char_lists.py  lint_check.py  lint_qmd.py  scan_chars.py
tests/: __init__.py  (+2 more)
(+31 files in other folders)
